# dfe-mlir

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/workflows/: buildAndTest.yml
cmake/: LLVM.cmake
include/: CMakeLists.txt
include/dfe/Conversion/: CMakeLists.txt  Passes.td
include/dfe/Conversion/AffineToMaxJ/: AffineToMaxJ.h
include/dfe/Dialect/: CMakeLists.txt
include/dfe/Dialect/DFE/IR/: CMakeLists.txt  DFE.td  DFEDialect.h
include/dfe/Dialect/MaxJ/IR/: ArithmeticOps.td  CMakeLists.txt  InterfaceOps.td  MaxJ.td  MaxJDialect.h  MaxJOps.h  MemOps.td  SVarOps.td  StructureOps.td  TypeOps.td  Types.td  ValueOps.td
src/: CMakeLists.txt
src/Conversion/: CMakeLists.txt  PassDetail.h
src/Conversion/AffineToMaxJ/: AffineToMaxJ.cc  CMakeLists.txt
src/Dialect/DFE/IR/: CMakeLists.txt  DFEDialect.cc
src/Dialect/MaxJ/IR/: CMakeLists.txt  MaxJDialect.cc  MaxJOps.cc
src/EmitMaxJ/: CMakeLists.txt
test/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in
test/Conversion/AffineToMaxJ/: simple-for.mlir
test/Dialect/MaxJ/IR/: arithmetic.mlir  const.mlir  counter.mlir  io.mlir  kernel.mlir  mem.mlir  svar.mlir  type.mlir
tools/: CMakeLists.txt
tools/dfe-opt/: CMakeLists.txt  dfe-opt.cc
tools/dfe-translate/: CMakeLists.txt  dfe-translate.cc
